k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cluster-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    # Warning: annotation "kubernetes.io/ingress.class" is deprecated, please use 'spec.ingressClassName' instead
    ingress.gcp.kubernetes.io/pre-shared-cert: "sg1"
    kubernetes.io/ingress.global-static-ip-name: "sg1"
spec:
  rules:
    - host: sg1.biddlr.com
      http:
        paths:
          - path: /auth/
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8080
          - path: /ticketing/
            pathType: Prefix
            backend:
              service:
                name: ticketing-service
                port:
                  number: 8081
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000
          - path: /payment/
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 8082
          - path: /queue/
            pathType: Prefix
            backend:
              service:
                name: queue-service
                port:
                  number: 8500
